--- a/index.html
+++ b/index.html
@@ -1,62 +1,21 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <title>Anon Chat</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-body {
-  margin:0;
-  background:#050505;
-  color:#e5e7eb;
-  font-family: monospace;
-}
-#top {
-  height:45px;
-  background:#000;
-  border-bottom:1px solid #111;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:0 15px;
-}
-#chat {
-  height:calc(100vh - 110px);
-  overflow-y:auto;
-  padding:10px;
-}
-.msg { margin-bottom:10px; }
-.name { color:#6b7280; font-size:12px; }
-.text { font-size:14px; }
-#input {
-  height:65px;
-  display:flex;
-  gap:10px;
-  padding:10px;
-  border-top:1px solid #111;
-}
-input {
-  flex:1;
-  background:#000;
-  border:1px solid #222;
-  color:white;
-  padding:10px;
-}
-button {
-  background:#111;
-  border:1px solid #333;
-  color:#9ca3af;
-  padding:0 15px;
-  cursor:pointer;
-}
-#adminBtn {
-  color:#f87171;
-  cursor:pointer;
-  font-weight:bold;
-}
+body{margin:0;background:#050505;color:#fff;font-family:monospace}
+#top{height:45px;background:#000;border-bottom:1px solid #111;display:flex;justify-content:space-between;align-items:center;padding:0 15px}
+#chat{height:calc(100vh - 110px);overflow:auto;padding:10px}
+.msg{margin-bottom:10px}
+.name{color:#6b7280;font-size:12px}
+#input{height:65px;display:flex;gap:10px;padding:10px;border-top:1px solid #111}
+input{flex:1;background:#000;border:1px solid #222;color:#fff;padding:10px}
+button{background:#111;border:1px solid #333;color:#9ca3af;padding:0 15px}
 </style>
 </head>
 
@@ -64,93 +23,63 @@ button {
 
 <div id="top">
   <div>anonymous://chat</div>
-  <div>
-    <span id="online">online</span> |
-    <span id="adminBtn">ADMIN</span>
-  </div>
+  <div id="admin">ADMIN</div>
 </div>
 
 <div id="chat"></div>
 
 <div id="input">
-  <input id="msg" placeholder="mesaj yaz..." autocomplete="off">
+  <input id="msg" placeholder="mesaj yaz">
   <button onclick="send()">send</button>
 </div>
 
 <script>
-/* ========== SUPABASE CONFIG ========== */
-const URL = "https://dhwqtanvouvonspqwawm.supabase.co";
-const KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRod3F0YW52b3V2b25zcHF3YXdtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwNTk2MDEsImV4cCI6MjA4MzYzNTYwMX0.DHJ9Grc75evWPhNVFmT_xOnEDKK4ssKjW1TWVtPnBKI";
-/* ==================================== */
+const SUPABASE_URL = "https://dhwqtanvouvonspqwawm.supabase.co";
+const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImRod3F0YW52b3V2b25zcHF3YXdtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgwNTk2MDEsImV4cCI6MjA4MzYzNTYwMX0.DHJ9Grc75evWPhNVFmT_xOnEDKK4ssKjW1TWVtPnBKI";
 
-const sb = supabase.createClient(URL, KEY);
+const sb = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-/* RASTGELE USER */
 const names=["root","ghost","null","cipher","shadow","void"];
 const username = names[Math.floor(Math.random()*names.length)]+"#"+Math.floor(Math.random()*900+100);
 
-/* MESAJLARI ÇEK */
-async function load() {
-  const { data, error } = await sb
-    .from("messages")
-    .select("*")
-    .order("id",{ascending:true});
-
-  if(error){ console.error(error); return; }
-
-  chat.innerHTML="";
-  data.forEach(m=>draw(m.username,m.text));
-}
-
-/* REALTIME */
-sb.channel("chat")
-  .on(
-    "postgres_changes",
-    { event:"INSERT", schema:"public", table:"messages" },
-    payload => draw(payload.new.username, payload.new.text)
-  )
-  .subscribe();
-
-/* MESAJ ÇİZ */
 function draw(u,t){
   const d=document.createElement("div");
   d.className="msg";
-  d.innerHTML=`
-    <div class="name">${u}</div>
-    <div class="text">${t}</div>
-  `;
+  d.innerHTML=`<div class="name">${u}</div><div>${t}</div>`;
   chat.appendChild(d);
   chat.scrollTop=chat.scrollHeight;
 }
 
-/* GÖNDER */
+async function load(){
+  const {data}=await sb.from("messages").select("*").order("id");
+  chat.innerHTML="";
+  data.forEach(m=>draw(m.username,m.text));
+}
+
 async function send(){
   const i=document.getElementById("msg");
   if(!i.value.trim()) return;
 
-  const { error } = await sb.from("messages").insert({
+  await sb.from("messages").insert({
     username: username,
     text: i.value
   });
 
-  if(error) console.error(error);
   i.value="";
 }
 
-/* ENTER */
-msg.addEventListener("keydown",e=>{
-  if(e.key==="Enter") send();
-});
+sb.channel("chat")
+  .on("postgres_changes",
+    {event:"INSERT",schema:"public",table:"messages"},
+    p=>draw(p.new.username,p.new.text)
+  )
+  .subscribe();
 
-/* ADMIN */
-adminBtn.onclick=()=>{
+admin.onclick=()=>{
   const p=prompt("Admin şifre:");
-  if(p==="12345"){
-    alert("Admin panel aktif (demo)");
-  }
+  if(p==="12345") alert("Admin giriş başarılı");
 };
 
-/* START */
 load();
 </script>
 
